# openclaw-ai-audit-hackathon

./: .gitignore  CLAUDE.md  DEMO.md  HANDOFF.md  PITCH.md  README.md  demo-meridian-real.sh  demo-meridian.sh  framework.json  package.json  start.sh  stop.sh  sync-tunnel.sh
.netlify/: netlify.toml
.next/: trace  trace-build
agent/: .env.example  pyproject.toml
agent/src/: db.py  events.py  loaders.py  orchestrator.py  prompts.py  scoring.py  server.py  tools.py
api/: audit.js
planning/: framework.md  hour-budget.md  premortem.md  questions.md
public/: index.html  questions.json
